@@ -91,6 +91,8 @@ UseNumericIndex = Yes
 LetSetVariablePrefix = set
 # Prefix to add to property Get function name
 GetVariablePrefix = get
+# Yes or No, When both Let and Set properties are present default to Let instead of Set
+ChooseLetOverSet = No
 #@-node:Properties
 #@+node:Classes
 
