@@ -1,5 +1,6 @@
 **0.4.0.4**
 
+- If **both property Let and Set** are present then choose the Set (new option to alter this to Let)
 - Fixed parsing bug with space before brackets on a call: *A = Something ()*
 - Fixed parsing bug with empty brackets on LHS of assignment: *A () = SomeFnReturningArray()*
 - Fixed issue with **"submit file"** button not being displayed when parsing failed
